Sync code from main: UI updates for headers, profile, cart, and order success

--- a/src/Frontend/admin-dashboard.html
+++ b/src/Frontend/admin-dashboard.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard - ShoppeClone</title>
+    <title>Admin Dashboard - GoShop</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
@@ -1174,7 +1174,7 @@
                         {
                             label: 'New Users',
                             data: [],
-                            borderColor: '#AD3029', // Shopee red
+                            borderColor: '#AD3029', // GoShop red
                             backgroundColor: 'rgba(173, 48, 41, 0.1)',
                             borderWidth: 3,
                             tension: 0.4,
