--- a/src/Frontend/otp.html
+++ b/src/Frontend/otp.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Verify OTP | ShoppeClone</title>
+    <title>Verify OTP | GoShop</title>
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
@@ -58,7 +58,7 @@
     <div class="relative z-10 w-full max-w-md bg-white/60 backdrop-blur-xl rounded-3xl shadow-2xl p-12">
 
         <div class="text-center mb-8">
-            <h2 class="text-3xl font-extrabold text-[#AD3029] mb-2">ShoppeClone</h2>
+            <h2 class="text-3xl font-extrabold text-[#AD3029] mb-2">GoShop</h2>
             <h3 class="text-xl font-semibold text-gray-800 mb-2">Verify your email</h3>
             <p class="text-gray-600">Enter the 6-digit code sent to your email</p>
         </div>
