--- a/src/Frontend/addresses.html
+++ b/src/Frontend/addresses.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shipping Addresses | ShoppeClone</title>
+    <title>Shipping Addresses | GoShop</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 </head>
@@ -35,17 +35,16 @@
                 <a href="profile.html" class="flex items-center gap-3 px-4 py-2 rounded-xl hover:bg-white/20">
                     <i class="fas fa-user"></i> Profile
                 </a>
-                <a href="my-orders-backend.html" class="flex items-center gap-3 px-4 py-2 rounded-xl hover:bg-white/20">
-                    <i class="fas fa-box"></i> My Orders
-                </a>
+
                 <a href="addresses.html" class="flex items-center gap-3 px-4 py-2 rounded-xl bg-white/20">
                     <i class="fas fa-map-marker-alt"></i> Shipping Addresses
                 </a>
                 <a href="#" class="flex items-center gap-3 px-4 py-2 rounded-xl hover:bg-white/20">
                     <i class="fas fa-lock"></i> Change Password
                 </a>
-                <a href="#" class="flex items-center gap-3 px-4 py-2 rounded-xl hover:bg-white/20">
-                    <i class="fas fa-heart"></i> Wishlist
+
+                <a href="index.html" class="flex items-center gap-3 px-4 py-2 rounded-xl hover:bg-white/20">
+                    <i class="fas fa-home"></i> Back to Home
                 </a>
                 <a href="#" onclick="logout()"
                     class="flex items-center gap-3 px-4 py-2 rounded-xl hover:bg-white/20 text-red-200">
