--- a/src/Frontend/daily-discover.html
+++ b/src/Frontend/daily-discover.html
@@ -4,19 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Discover - Shopee Clone</title>
+    <title>Daily Discover - GoShop</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="bg-gray-100">
     <!-- Header -->
-    <header class="bg-gradient-to-r from-orange-500 to-orange-600 shadow-md sticky top-0 z-50">
+    <header class="header-gradient shadow-md sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center py-4">
                 <div class="flex items-center space-x-3">
                     <i class="fas fa-shopping-bag text-3xl text-white"></i>
-                    <a href="index.html" class="text-2xl font-bold text-white">Shopee Clone</a>
+                    <a href="index.html" class="text-2xl font-bold text-white">GoShop</a>
                 </div>
                 <div class="flex-1 max-w-2xl mx-8">
                     <div class="relative">
