--- a/src/Frontend/my-orders-backend.html
+++ b/src/Frontend/my-orders-backend.html
@@ -4,28 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Orders - Shopee Clone</title>
+    <title>My Orders - GoShop</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
 
 <body class="bg-gray-50 flex flex-col min-h-screen">
     <!-- Header -->
-    <header class="bg-white shadow-sm sticky top-0 z-50 border-b border-gray-200">
+    <header class="bg-[#AD3029] text-white shadow-md sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex items-center justify-between py-4 gap-8">
+            <div class="flex items-center justify-between h-20 gap-8">
                 <div class="flex items-center gap-4 min-w-fit">
-                    <a href="index.html" class="flex items-center gap-2 text-orange-500 hover:opacity-90">
+                    <a href="index.html" class="flex items-center gap-2 text-white hover:opacity-90">
                         <i class="fas fa-shopping-bag text-3xl"></i>
-                        <span class="text-2xl font-bold">SHOP CLONE</span>
+                        <span class="text-2xl font-bold">GoShop</span>
                     </a>
                 </div>
-                <div class="flex items-center gap-5 text-gray-600 min-w-fit">
-                    <a href="cart-backend.html" class="hover:text-orange-500 transition">
+                <div class="flex items-center gap-5 text-white min-w-fit">
+                    <a href="cart-backend.html" class="hover:text-red-200 transition">
                         <i class="fas fa-shopping-cart text-xl"></i>
                     </a>
-                    <a href="profile.html" class="flex items-center gap-2 cursor-pointer hover:text-orange-500 transition">
-                        <img id="userAvatar" src="" alt="User" class="w-8 h-8 rounded-full border border-gray-200">
+                    <a href="profile.html" class="flex items-center gap-2 cursor-pointer hover:text-red-200 transition">
+                        <img id="userAvatar" src="https://ui-avatars.com/api/?name=User&background=fecaca&color=AD3029"
+                            alt="User" class="w-8 h-8 rounded-full border-2 border-white/50">
+                        <span id="userNameDisplay"
+                            class="font-semibold max-w-[100px] truncate hidden md:block">User</span>
                     </a>
                 </div>
             </div>
@@ -36,22 +39,23 @@
     <main class="flex-grow w-full max-w-[1600px] mx-auto px-4 sm:px-6 lg:px-8 py-8">
         <div class="flex items-center justify-between mb-6 flex-wrap gap-3">
             <h1 class="text-2xl font-bold text-gray-800 flex items-center">
-                <i class="fas fa-box text-orange-500 mr-2"></i>
+                <i class="fas fa-box text-[#AD3029] mr-2"></i>
                 My Orders
             </h1>
             <div class="flex items-center gap-3">
-                <button id="btnDeleteAllOrders" class="hidden px-4 py-2 text-sm border border-red-600 text-red-600 rounded-lg hover:bg-red-50 transition font-medium">
+                <button id="btnDeleteAllOrders"
+                    class="hidden px-4 py-2 text-sm border border-red-600 text-red-600 rounded-lg hover:bg-red-50 transition font-medium">
                     <i class="fas fa-trash-alt mr-1"></i> Xóa tất cả đơn hàng
                 </button>
-                <a href="profile.html" class="text-orange-500 hover:text-orange-600 font-medium">
-                    <i class="fas fa-arrow-left mr-1"></i> Back to Profile
+                <a href="index.html" class="text-[#AD3029] hover:text-[#8B2520] font-medium">
+                    <i class="fas fa-arrow-left mr-1"></i> Back to Home
                 </a>
             </div>
         </div>
 
         <!-- Loading -->
         <div id="loadingOrders" class="text-center py-16">
-            <i class="fas fa-spinner fa-spin text-4xl text-orange-500 mb-4"></i>
+            <i class="fas fa-spinner fa-spin text-4xl text-[#AD3029] mb-4"></i>
             <p class="text-gray-600">Loading your orders...</p>
         </div>
 
@@ -59,7 +63,7 @@
         <div id="emptyOrders" class="hidden text-center py-16 bg-white rounded-lg shadow">
             <i class="fas fa-box-open text-6xl text-gray-300 mb-4"></i>
             <p class="text-gray-600 text-lg mb-4">You haven't placed any orders yet.</p>
-            <a href="index.html" class="inline-block bg-orange-500 text-white px-8 py-2 rounded hover:bg-orange-600">
+            <a href="index.html" class="inline-block bg-[#AD3029] text-white px-8 py-2 rounded hover:bg-[#8B2520]">
                 Start Shopping
             </a>
         </div>
@@ -71,7 +75,7 @@
     <!-- Footer -->
     <footer class="bg-white border-t py-8 mt-auto">
         <div class="max-w-7xl mx-auto px-4 text-center text-gray-500 text-sm">
-            &copy; 2026 SHOP CLONE. All Rights Reserved.
+            &copy; 2026 GoShop. All Rights Reserved.
         </div>
     </footer>
 
@@ -160,8 +164,8 @@
                                 </p>
                             </div>
                             <div class="text-right shrink-0">
-                                <p class="font-bold text-orange-500 text-lg">₫${formatVND(total)}</p>
-                                <p class="text-sm text-orange-500 mt-1">Xem chi tiết <i class="fas fa-chevron-right text-xs"></i></p>
+                                <p class="font-bold text-[#AD3029] text-lg">₫${formatVND(total)}</p>
+                                <p class="text-sm text-[#AD3029] mt-1">Xem chi tiết <i class="fas fa-chevron-right text-xs"></i></p>
                             </div>
                         </div>
                     </div>
@@ -173,15 +177,19 @@
                 console.error('Error loading orders:', error);
                 document.getElementById('loadingOrders').classList.add('hidden');
                 document.getElementById('emptyOrders').classList.remove('hidden');
-                document.getElementById('emptyOrders').querySelector('p').textContent = 
+                document.getElementById('emptyOrders').querySelector('p').textContent =
                     'Failed to load orders. ' + (error.message || '');
             }
         }
 
         function updateUserAvatar() {
-            const userName = localStorage.getItem('userName') || 'User';
+            const user = JSON.parse(localStorage.getItem('user') || '{}');
+            const userName = user.fullName || localStorage.getItem('userName') || 'User';
             const el = document.getElementById('userAvatar');
-            if (el) el.src = `https://ui-avatars.com/api/?name=${encodeURIComponent(userName)}&background=ffedd5&color=f97316`;
+            if (el) el.src = `https://ui-avatars.com/api/?name=${encodeURIComponent(userName)}&background=fecaca&color=AD3029`;
+
+            const nameEl = document.getElementById('userNameDisplay');
+            if (nameEl) nameEl.textContent = userName;
         }
 
         async function cancelOrderFromList(orderId) {
