--- a/src/Frontend/order-detail.html
+++ b/src/Frontend/order-detail.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order Details - Shopee Clone</title>
+    <title>Order Details - GoShop</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
-        @keyframes bounceShopee {
+        @keyframes bounceGoShop {
 
             0%,
             20%,
@@ -27,8 +27,8 @@
             }
         }
 
-        .bounce-shopee {
-            animation: bounceShopee 2s infinite;
+        .bounce-goshop {
+            animation: bounceGoShop 2s infinite;
         }
 
         /* Star Rating Styles */
@@ -173,16 +173,17 @@
             }
         }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="bg-gray-100">
     <!-- Header -->
-    <header class="bg-gradient-to-r from-orange-500 to-orange-600 shadow-md sticky top-0 z-50">
+    <header class="header-gradient shadow-md sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center py-4">
                 <div class="flex items-center space-x-3">
-                    <i class="fas fa-shopping-bag text-3xl text-white bounce-shopee"></i>
-                    <a href="index.html" class="text-2xl font-bold text-white">Shopee Clone</a>
+                    <i class="fas fa-shopping-bag text-3xl text-white bounce-goshop"></i>
+                    <a href="index.html" class="text-2xl font-bold text-white">GoShop</a>
                 </div>
                 <div class="flex items-center space-x-4">
                     <div id="userNav" class="flex items-center space-x-3">
@@ -203,9 +204,9 @@
     <main class="max-w-6xl mx-auto px-4 py-8">
         <!-- Breadcrumb -->
         <nav class="flex text-sm text-gray-600 mb-6">
-            <a href="index.html" class="hover:text-orange-500">Home</a>
+            <a href="index.html" class="hover:text-[#AD3029]">Home</a>
             <span class="mx-2">/</span>
-            <a href="my-orders-backend.html" class="hover:text-orange-500">My Orders</a>
+            <a href="my-orders-backend.html" class="hover:text-[#AD3029]">My Orders</a>
             <span class="mx-2">/</span>
             <span class="text-gray-800 font-semibold">Order Details</span>
         </nav>
@@ -299,7 +300,7 @@
                 <div class="mb-6">
                     <label class="block text-gray-700 font-semibold mb-2">Your Review</label>
                     <textarea id="reviewComment" rows="4"
-                        class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:border-orange-500 focus:outline-none"
+                        class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:border-[#AD3029] focus:outline-none"
                         placeholder="Share your experience with this product..."></textarea>
                     <p class="text-sm text-gray-500 mt-1">Minimum 10 characters</p>
                 </div>
@@ -331,7 +332,7 @@
                         Cancel
                     </button>
                     <button onclick="submitReview()"
-                        class="flex-1 px-6 py-3 bg-orange-500 hover:bg-orange-600 text-white rounded-lg font-semibold transition">
+                        class="flex-1 px-6 py-3 bg-[#AD3029] hover:bg-[#8B2520] text-white rounded-lg font-semibold transition">
                         Submit Review
                     </button>
                 </div>
@@ -353,7 +354,7 @@
                 <div class="mb-4">
                     <label class="block text-gray-700 font-semibold mb-2">Lý do khiếu nại</label>
                     <select id="disputeReason"
-                        class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:border-orange-500 focus:outline-none">
+                        class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:border-[#AD3029] focus:outline-none">
                         <option value="Sản phẩm không đúng mô tả">Sản phẩm không đúng mô tả</option>
                         <option value="Sản phẩm bị hỏng/lỗi">Sản phẩm bị hỏng/lỗi</option>
                         <option value="Không nhận được hàng">Không nhận được hàng</option>
@@ -365,7 +366,7 @@
                 <div class="mb-6">
                     <label class="block text-gray-700 font-semibold mb-2">Mô tả chi tiết</label>
                     <textarea id="disputeDescription" rows="4" placeholder="Mô tả chi tiết vấn đề..."
-                        class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:border-orange-500 focus:outline-none"></textarea>
+                        class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:border-[#AD3029] focus:outline-none"></textarea>
                 </div>
                 <div class="mb-6">
                     <label class="block text-gray-700 font-semibold mb-3">
@@ -385,7 +386,7 @@
                     <button onclick="closeDisputeModal()"
                         class="flex-1 px-6 py-3 border-2 border-gray-300 rounded-lg font-semibold hover:bg-gray-50 transition">Hủy</button>
                     <button onclick="submitDispute()"
-                        class="flex-1 px-6 py-3 bg-orange-500 hover:bg-orange-600 text-white rounded-lg font-semibold transition">Gửi
+                        class="flex-1 px-6 py-3 bg-[#AD3029] hover:bg-[#8B2520] text-white rounded-lg font-semibold transition">Gửi
                         khiếu nại</button>
                 </div>
             </div>
@@ -459,7 +460,7 @@
                     return;
                 }
                 document.getElementById('productsList').innerHTML =
-                    '<p class="text-red-500 py-4">Không tải được đơn hàng. <a href="my-orders-backend.html" class="text-orange-500 underline">Quay lại Đơn hàng</a></p>';
+                    '<p class="text-red-500 py-4">Không tải được đơn hàng. <a href="my-orders-backend.html" class="text-[#AD3029] underline">Quay lại Đơn hàng</a></p>';
             }
         }
 
@@ -694,7 +695,7 @@
                 let reviewBtn = '';
                 if (canReview && item.productId) {
                     reviewBtn = `<button onclick="openReviewModalByProductId('${item.productId}')" 
-                        class="px-6 py-2 border-2 border-orange-500 text-orange-500 rounded-lg font-semibold hover:bg-orange-50 transition">
+                        class="px-6 py-2 border-2 border-[#AD3029] text-[#AD3029] rounded-lg font-semibold hover:bg-red-50 transition">
                         <i class="fas fa-star mr-2"></i>Viết đánh giá
                     </button>`;
                 } else if (hasReviewed) {
@@ -714,7 +715,7 @@
                         <h3 class="font-semibold text-gray-800 mb-1">${item.productName || 'Product'}</h3>
                         <p class="text-sm text-gray-600">${item.variantName ? 'Variant: ' + item.variantName : ''}</p>
                         <p class="text-sm text-gray-600">Quantity: ${qty}</p>
-                        <p class="text-orange-600 font-bold mt-1">₫${formatVND(price * qty)}</p>
+                        <p class="text-[#AD3029] font-bold mt-1">₫${formatVND(price * qty)}</p>
                     </div>
                     ${reviewBtn}
                 </div>`;
@@ -909,7 +910,7 @@
             const userName = localStorage.getItem('userName') || 'User';
             if (token) {
                 document.getElementById('userName').textContent = userName;
-                document.getElementById('userAvatar').src = `https://ui-avatars.com/api/?name=${encodeURIComponent(userName)}&background=fff&color=f97316`;
+                document.getElementById('userAvatar').src = `https://ui-avatars.com/api/?name=${encodeURIComponent(userName)}&background=fecaca&color=AD3029`;
             } else {
                 const params = new URLSearchParams(window.location.search);
                 let id = params.get('id') || localStorage.getItem('viewOrderId');
