--- a/src/Frontend/product-detail.html
+++ b/src/Frontend/product-detail.html
@@ -4,41 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Detail - Shopee Clone</title>
+    <title>Product Detail - GoShop</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <style>
-        /* ===== ShopeeClone Red + Beige (MATCH SIGN IN PAGE) ===== */
-        .text-orange-500,
-        .text-orange-600 {
-            color: #AD3029 !important;
-        }
-
-        .bg-orange-500,
-        .bg-orange-600 {
-            background-color: #AD3029 !important;
-            color: white !important;
-        }
-
-        .hover\:bg-orange-600:hover,
-        .hover\:bg-orange-700:hover {
-            background-color: #8f2621 !important;
-        }
-
-        .border-orange-500,
-        .border-orange-600 {
-            border-color: #AD3029 !important;
-        }
-
-        .from-orange-500 {
-            --tw-gradient-from: #AD3029 !important;
-        }
-
-        .to-orange-600 {
-            --tw-gradient-to: #CD5252 !important;
-        }
-
-        @keyframes bounceShopee {
+        @keyframes bounceGoShop {
 
             0%,
             20%,
@@ -57,8 +28,8 @@
             }
         }
 
-        .bounce-shopee {
-            animation: bounceShopee 2s infinite;
+        .bounce-goshop {
+            animation: bounceGoShop 2s infinite;
         }
 
         .thumbnail-active {
@@ -124,62 +95,109 @@
 
 <body class="bg-gray-100">
     <!-- Header -->
-    <header class="bg-gradient-to-r from-orange-500 to-orange-600 shadow-md sticky top-0 z-50">
+    <header class="bg-[#AD3029] text-white shadow-md sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between items-center py-4">
-                <div class="flex items-center space-x-3">
-                    <i class="fas fa-shopping-bag text-3xl text-white bounce-shopee"></i>
-                    <a href="index.html" class="text-2xl font-bold text-white">Shopee Clone</a>
-                </div>
+            <div class="flex items-center justify-between h-20 gap-8">
+                <!-- 1. Logo Section -->
+                <a href="index.html" class="flex items-center gap-2 group flex-shrink-0 hover:opacity-90 transition">
+                    <i class="fas fa-shopping-bag text-3xl text-white bounce-goshop"></i>
+                    <span class="text-2xl font-bold tracking-tight">GoShop</span>
+                </a>
 
-                <div class="flex-1 max-w-2xl mx-8">
-                    <div class="relative">
-                        <input type="text" placeholder="Search for millions of products..."
-                            class="w-full p-3 pl-12 pr-16 rounded-sm border-2 border-white focus:border-orange-300 focus:outline-none">
-                        <i
-                            class="fas fa-search absolute left-5 top-1/2 transform -translate-y-1/2 text-gray-400 text-xl"></i>
-                        <button
-                            class="absolute right-3 top-1/2 transform -translate-y-1/2 bg-orange-600 hover:bg-orange-700 text-white px-6 py-2 rounded-sm font-semibold">
-                            Search
+                <!-- 2. Search Section (Centered & Wide) -->
+                <div class="flex-1 max-w-2xl relative">
+                    <div class="relative group">
+                        <input id="globalSearchInput" type="text" data-i18n="header.search_placeholder"
+                            placeholder="Search products..."
+                            class="w-full h-10 pl-4 pr-12 rounded-sm text-black focus:outline-none shadow-inner transition border-2 border-transparent focus:border-red-300">
+                        <button id="globalSearchButton"
+                            class="absolute right-0 top-0 h-10 w-12 bg-[#DC2626] hover:bg-[#B91C1C] flex items-center justify-center rounded-r-sm transition">
+                            <i class="fas fa-search text-white"></i>
                         </button>
                     </div>
                 </div>
 
-                <div class="flex items-center space-x-4">
-                    <!-- Notification & Help (Addons) -->
-                    <div class="flex items-center gap-4 text-white mr-2 hidden md:flex">
-                        <button class="relative hover:opacity-80 transition">
-                            <i class="fas fa-bell text-xl"></i>
-                            <span
-                                class="absolute -top-1 -right-0.5 w-2 h-2 bg-red-600 rounded-full border border-orange-500"></span>
-                        </button>
-                        <button class="hover:opacity-80 transition">
-                            <i class="fas fa-question-circle text-xl"></i>
-                        </button>
-                    </div>
-
-                    <div id="guestNav" class="flex items-center space-x-3">
-                        <a href="/login.html" class="text-white font-semibold hover:text-orange-200 transition">Sign
-                            in</a>
-                        <a href="/register.html"
-                            class="bg-white text-orange-600 hover:bg-orange-50 px-4 py-2 rounded-full font-semibold transition">Sign
-                            up</a>
-                    </div>
-                    <div id="userNav" class="hidden flex items-center space-x-3">
-                        <div class="flex items-center space-x-2 cursor-pointer">
-                            <img id="userAvatar" src="" alt="User" class="w-6 h-6 rounded-full border border-white">
-                            <span id="userName" class="font-semibold text-white"></span>
-                        </div>
-                        <button onclick="logout()" class="text-white hover:text-red-200 ml-2"><i
-                                class="fas fa-sign-out-alt"></i></button>
-                    </div>
-                    <button onclick="window.location.href='cart-backend.html'"
-                        class="relative p-2 hover:bg-orange-400 rounded-full transition">
-                        <i class="fas fa-shopping-cart text-xl text-white"></i>
-                        <span id="cartBadge"
-                            class="absolute -top-1 -right-1 bg-red-500 text-white text-xs font-bold rounded-full w-5 h-5 flex items-center justify-center"
-                            style="display: none;">0</span>
+                <!-- 3. Actions Section (Right) -->
+                <div class="flex items-center gap-6">
+                    <!-- Language Toggle -->
+                    <button id="lang-toggle"
+                        class="text-sm font-medium hover:opacity-80 flex items-center gap-1 transition">
+                        <img src="https://flagcdn.com/24x18/gb.png" alt="English"
+                            class="inline-block mr-1.5 w-5 h-auto object-cover border border-gray-200">
+                        <span class="uppercase">English</span>
                     </button>
+
+                    <!-- Notifications -->
+                    <div class="relative group h-full flex items-center">
+                        <button class="hover:opacity-80 transition relative p-2">
+                            <i class="far fa-bell text-xl"></i>
+                            <!-- Badge could go here -->
+                        </button>
+                        <!-- Dropdown -->
+                        <div class="hidden group-hover:block absolute top-full right-0 pt-2 w-72 z-50">
+                            <div
+                                class="bg-white text-black shadow-xl rounded-lg border border-gray-200 overflow-hidden">
+                                <div class="p-3 border-b bg-gray-50 flex justify-between items-center">
+                                    <span class="text-sm font-semibold text-gray-700">Notifications</span>
+                                    <button class="text-xs text-blue-600 hover:underline">Mark all read</button>
+                                </div>
+                                <div class="p-8 text-center text-sm text-gray-500 flex flex-col items-center">
+                                    <i class="far fa-bell-slash text-2xl mb-2 text-gray-300"></i>
+                                    No new notifications
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Cart -->
+                    <a href="cart-backend.html" class="relative hover:opacity-80 transition p-1">
+                        <i class="fas fa-shopping-cart text-xl"></i>
+                        <span id="cartBadge"
+                            class="absolute -top-1 -right-1 bg-white text-[#AD3029] text-[10px] font-bold px-1.5 py-0.5 rounded-full shadow-sm hidden">0</span>
+                    </a>
+
+                    <div class="h-6 w-px bg-white/30"></div>
+
+                    <!-- Auth Actions -->
+                    <!-- Guest -->
+                    <div id="guestNav" class="flex items-center gap-3 font-medium text-sm">
+                        <a href="register.html" class="hover:text-gray-200 transition">Sign Up</a>
+                        <a href="login.html" class="hover:text-gray-200 transition">Sign in</a>
+                    </div>
+
+                    <!-- User -->
+                    <div id="userNav" class="hidden flex items-center gap-2 cursor-pointer relative group h-full">
+                        <img src="https://ui-avatars.com/api/?name=User&background=fecaca&color=AD3029"
+                            class="w-8 h-8 rounded-full border-2 border-white/50" id="userAvatar">
+                        <span id="userName" class="font-semibold max-w-[100px] truncate hidden md:block">User</span>
+                        <!-- Dropdown -->
+                        <div class="absolute right-0 top-full pt-2 w-48 hidden group-hover:block z-50 animate-fade-in">
+                            <div class="bg-white text-black rounded-md shadow-lg py-1 border border-gray-100">
+                                <a href="profile.html" class="block px-4 py-2 text-sm hover:bg-gray-100 transition">
+                                    <i class="far fa-user mr-2 text-gray-400"></i>My Profile
+                                </a>
+                                <a href="my-orders-backend.html"
+                                    class="block px-4 py-2 text-sm hover:bg-gray-100 transition">
+                                    <i class="fas fa-box mr-2 text-gray-400"></i>My Orders
+                                </a>
+                                <!-- Shop Link (Dynamic) -->
+                                <a href="#" id="sellerChannelLink"
+                                    class="block px-4 py-2 text-sm hover:bg-gray-100 transition hidden">
+                                    <i class="fas fa-store mr-2 text-gray-400"></i>My Shop
+                                </a>
+                                <!-- Admin Link (Dynamic) -->
+                                <a href="admin-dashboard.html" id="adminPanelLink"
+                                    class="block px-4 py-2 text-sm hover:bg-gray-100 transition font-bold text-red-600 hidden">
+                                    <i class="fas fa-user-shield mr-2"></i>Admin Panel
+                                </a>
+                                <div class="border-t border-gray-100 my-1"></div>
+                                <button onclick="logout()"
+                                    class="block w-full text-left px-4 py-2 text-sm text-red-600 hover:bg-red-50 transition">
+                                    <i class="fas fa-sign-out-alt mr-2"></i>Logout
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -356,7 +374,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white mt-16">
         <div class="max-w-7xl mx-auto px-4 py-12">
-            <p class="text-center text-gray-400">&copy; 2026 Shopee Clone. All rights reserved.</p>
+            <p class="text-center text-gray-400">&copy; 2026 GoShop. All rights reserved.</p>
         </div>
     </footer>
 
@@ -804,21 +822,47 @@
         // --- AUTH & NAVBAR LOGIC ---
         function updateNavbar() {
             const token = localStorage.getItem('accessToken');
-            const userName = localStorage.getItem('userName') || 'User';
+            const user = JSON.parse(localStorage.getItem('user') || '{}');
+            const userName = user.fullName || localStorage.getItem('userName') || 'User';
+            const userRole = user.role || localStorage.getItem('userRole') || 'CUSTOMER';
 
             const guestNav = document.getElementById('guestNav');
             const userNav = document.getElementById('userNav');
             const userNameEl = document.getElementById('userName');
             const userAvatar = document.getElementById('userAvatar');
+            const adminPanelLink = document.getElementById('adminPanelLink');
+            const sellerChannelLink = document.getElementById('sellerChannelLink');
 
+            // --- 1. HANDLE AUTH STATE ---
             if (token) {
+                // LOGGED IN
                 if (guestNav) guestNav.classList.add('hidden');
                 if (userNav) userNav.classList.remove('hidden');
+                if (userNav) userNav.style.display = 'flex'; // Ensure flex layout
+
                 if (userNameEl) userNameEl.textContent = userName;
-                if (userAvatar) userAvatar.src = `https://ui-avatars.com/api/?name=${encodeURIComponent(userName)}&background=fff&color=f97316`;
+                if (userAvatar) {
+                    // Use ui-avatars with Red Theme (#AD3029 background, #fecaca text)
+                    userAvatar.src = `https://ui-avatars.com/api/?name=${encodeURIComponent(userName)}&background=fecaca&color=AD3029`;
+                }
+
+                // --- 2. HANDLE ROLES ---
+                // Show Admin Panel if ADMIN
+                if (userRole === 'ADMIN' && adminPanelLink) {
+                    adminPanelLink.classList.remove('hidden');
+                }
+                // Show Seller Channel if SELLER (or ADMIN often has access too)
+                if ((userRole === 'SELLER' || userRole === 'ADMIN') && sellerChannelLink) {
+                    sellerChannelLink.classList.remove('hidden');
+                    // Update link to point to actual shop if needed
+                    sellerChannelLink.href = 'shop-detail.html?myshop=true';
+                }
+
             } else {
+                // NOT LOGGED IN
                 if (guestNav) guestNav.classList.remove('hidden');
                 if (userNav) userNav.classList.add('hidden');
+                if (userNav) userNav.style.display = 'none';
             }
         }
 
