--- a/src/Frontend/reset-password.html
+++ b/src/Frontend/reset-password.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reset Password | ShoppeClone</title>
+    <title>Reset Password | GoShop</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <style>
@@ -42,7 +42,7 @@
     <div class="relative z-10 w-full max-w-md bg-white/30 backdrop-blur-xl rounded-3xl shadow-2xl p-12">
 
         <div class="text-center mb-8">
-            <h2 class="text-3xl font-extrabold text-purple-700 mb-2">ShoppeClone</h2>
+            <h2 class="text-3xl font-extrabold text-purple-700 mb-2">GoShop</h2>
             <h3 class="text-xl font-semibold text-gray-800 mb-2">Reset Password</h3>
             <p class="text-gray-600">Enter your new password</p>
         </div>
