--- a/src/Frontend/seller-register.html
+++ b/src/Frontend/seller-register.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <style>
-        /* ===== ShopeeClone Red + Beige (MATCH SKETCH) ===== */
+        /* ===== GoShop Red + Beige (MATCH SKETCH) ===== */
 
         /* ========== BRAND COLORS ==========
        Red   : #AD3029
@@ -100,17 +100,67 @@
 <body class="bg-gray-50 flex flex-col min-h-screen font-sans">
 
     <!-- Header -->
-    <header class="header-gradient shadow-md border-b border-white/10 sticky top-0 z-50">
-        <div class="container mx-auto px-4 py-3 flex justify-between items-center max-w-6xl">
-            <div class="flex items-center gap-3">
-                <i class="fas fa-store text-white text-2xl"></i>
-                <h1 class="text-xl font-bold text-white">Shopee Seller Centre</h1>
-            </div>
-            <div class="flex items-center gap-6">
-                <div class="flex items-center gap-2 text-white">
-                    <img id="headerAvatar" src="https://ui-avatars.com/api/?name=User&background=fff&color=AD3029"
-                        class="w-8 h-8 rounded-full border border-white">
-                    <span id="headerName" class="font-medium text-white text-sm">User</span>
+    <header class="bg-[#AD3029] text-white shadow-md sticky top-0 z-50">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex items-center justify-between h-20 gap-8">
+                <!-- 1. Logo Section -->
+                <a href="index.html" class="flex items-center gap-2 group flex-shrink-0 hover:opacity-90 transition">
+                    <i class="fas fa-shopping-bag text-3xl text-white bounce-goshop"></i>
+                    <span class="text-2xl font-bold tracking-tight">GoShop | Seller Centre</span>
+                </a>
+
+                <!-- 2. Spacer (replaces Search) -->
+                <div class="flex-1"></div>
+
+                <!-- 3. Actions Section -->
+                <div class="flex items-center gap-6">
+                    <!-- Language Toggle -->
+                    <button id="langToggle" class="flex items-center gap-1 hover:opacity-80 transition">
+                        <!-- Icons injected via JS -->
+                    </button>
+
+                    <div class="h-6 w-px bg-white/30"></div>
+
+                    <!-- Auth Actions -->
+                    <!-- Guest -->
+                    <div id="guestNav" class="flex items-center gap-3 font-medium text-sm">
+                        <a href="register.html" class="hover:text-gray-200 transition">Sign Up</a>
+                        <a href="login.html" class="hover:text-gray-200 transition">Sign in</a>
+                    </div>
+
+                    <!-- User -->
+                    <div id="userNav" class="hidden flex items-center gap-2 cursor-pointer relative group h-full">
+                        <img src="" class="w-8 h-8 rounded-full border-2 border-white/50" id="userAvatar">
+                        <span id="userName" class="font-semibold max-w-[100px] truncate hidden md:block">User</span>
+
+                        <!-- Dropdown -->
+                        <div class="absolute right-0 top-full pt-2 w-48 hidden group-hover:block z-50 animate-fade-in">
+                            <div class="bg-white text-black rounded-md shadow-lg py-1 border border-gray-100">
+                                <a href="profile.html" class="block px-4 py-2 text-sm hover:bg-gray-100 transition">
+                                    <i class="far fa-user mr-2 text-gray-400"></i>My Profile
+                                </a>
+                                <a href="my-orders-backend.html"
+                                    class="block px-4 py-2 text-sm hover:bg-gray-100 transition">
+                                    <i class="fas fa-box mr-2 text-gray-400"></i>My Orders
+                                </a>
+                                <!-- Shop Link (Dynamic) -->
+                                <a href="#" id="sellerChannelLink"
+                                    class="hidden px-4 py-2 text-sm hover:bg-gray-100 transition">
+                                    <i class="fas fa-store mr-2 text-gray-400"></i>My Shop
+                                </a>
+                                <!-- Admin Link (Dynamic) -->
+                                <a href="admin-dashboard.html" id="adminPanelLink"
+                                    class="hidden px-4 py-2 text-sm hover:bg-gray-100 transition font-bold text-red-600">
+                                    <i class="fas fa-user-shield mr-2"></i>Admin Panel
+                                </a>
+                                <div class="border-t border-gray-100 my-1"></div>
+                                <button onclick="logout()"
+                                    class="block w-full text-left px-4 py-2 text-sm text-red-600 hover:bg-red-50 transition">
+                                    <i class="fas fa-sign-out-alt mr-2"></i>Logout
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -356,17 +406,71 @@
     </main>
 
     <script>
-        // Check login
-        const token = localStorage.getItem('accessToken');
-        const userName = localStorage.getItem('userName') || 'User';
+        // Check login and Update Navbar
 
-        if (!token) {
-            alert('Please login first!');
-            window.location.href = 'login.html';
-        } else {
-            document.getElementById('headerName').textContent = userName;
-            document.getElementById('headerAvatar').src = `https://ui-avatars.com/api/?name=${encodeURIComponent(userName)}&background=random`;
+        async function updateNavbar() {
+            const token = localStorage.getItem('accessToken');
+            const user = JSON.parse(localStorage.getItem('user') || '{}');
+            const userName = user.fullName || localStorage.getItem('userName') || 'User';
+            const userRole = user.role || localStorage.getItem('userRole') || 'CUSTOMER';
+
+            const guestNav = document.getElementById('guestNav');
+            const userNav = document.getElementById('userNav');
+            const userNameEl = document.getElementById('userName');
+            const userAvatar = document.getElementById('userAvatar');
+            const adminPanelLink = document.getElementById('adminPanelLink');
+            const sellerChannelLink = document.getElementById('sellerChannelLink');
+
+            if (token) {
+                // LOGGED IN
+                if (guestNav) guestNav.classList.add('hidden');
+                if (userNav) userNav.classList.remove('hidden');
+                if (userNav) userNav.style.display = 'flex';
+
+                if (userNameEl) userNameEl.textContent = userName;
+                if (userAvatar) {
+                    userAvatar.src = `https://ui-avatars.com/api/?name=${encodeURIComponent(userName)}&background=fecaca&color=AD3029`;
+                }
+
+                // CHECK SHOP STATUS logic isn't strictly needed HERE because we ARE on the register page,
+                // but good to have for the dropdown menu consistency.
+                // However, avoid infinite loop if checkShopStatus redirects back here.
+                // Let's just set the link based on role for now or simple check.
+                if (userRole === 'ADMIN' && adminPanelLink) adminPanelLink.classList.remove('hidden');
+
+                // If user is already a SELLER, they shouldn't ideally be on this page, but if they are:
+                if (userRole === 'SELLER' || userRole === 'ADMIN') {
+                    if (sellerChannelLink) {
+                        sellerChannelLink.classList.remove('hidden');
+                        sellerChannelLink.href = 'shop-detail.html?myshop=true';
+                        sellerChannelLink.innerHTML = '<i class="fas fa-store mr-2 text-gray-400"></i>My Shop';
+                    }
+                } else {
+                    // If CUSTOMER, link to Register (which is THIS page, or just hide to avoid redundancy)
+                    // Hiding it in dropdown while ON the register page makes sense to avoid confusion
+                }
+
+            } else {
+                // NOT LOGGED IN - Redirect
+                alert('Please login first!');
+                window.location.href = 'login.html';
+                return;
+            }
         }
+
+        function logout() {
+            if (confirm('Are you sure you want to logout?')) {
+                localStorage.removeItem('accessToken');
+                localStorage.removeItem('userName');
+                localStorage.removeItem('refreshToken');
+                window.location.href = 'login.html';
+            }
+        }
+
+        // Initialize
+        document.addEventListener('DOMContentLoaded', () => {
+            updateNavbar();
+        });
 
         // Preview Upload Image
         function previewImage(input, previewId) {
