--- a/src/Frontend/token-test.html
+++ b/src/Frontend/token-test.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Token Storage Test | ShoppeClone</title>
+    <title>Token Storage Test | GoShop</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
